plugins {
    id("fabric-loom") version "1.7.4"
    id("java-library")
    id("io.freefair.lombok") version "8.12.2.1"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
    maven {
        name = "Aliyun"
        url = uri("https://maven.aliyun.com/repository/public/")
    }
    maven {
        name = "Fabric"
        url = uri("https://maven.fabricmc.net/")
    }
    maven {
        name = "Masady"
        url = uri("https://masa.dy.fi/maven/")
    }
}

dependencies {
    minecraft("com.mojang:minecraft:${project.property("minecraftVersion")}")
    mappings(loom.officialMojangMappings())
    modImplementation("net.fabricmc:fabric-loader:${project.property("loaderVersion")}")
    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.property("apiVersion")}")

    include(implementation("org.xerial:sqlite-jdbc:3.45.1.0"))
    include(implementation("com.google.code.gson:gson:2.11.0"))

    modImplementation("carpet:fabric-carpet:${project.property("carpetVersion")}")

    // ---- 测试依赖 ----
    testImplementation("org.junit.jupiter:junit-jupiter:5.11.0")
    testImplementation("org.mockito:mockito-core:5.12.0")
    testImplementation("org.mockito:mockito-junit-jupiter:5.12.0")
}

// ---- 测试配置 ----
tasks.named('test') {
    useJUnitPlatform()
}

lombok {
    version = "1.18.36"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

// ── 构建后自动部署到测试服务器 ──

/** 测试服务器 mods 目录。 */
def serverModsDir = file("../../serverjava/mods")

/**
 * 自动复制构建产物到测试服务器 mods 目录。
 * 在 remapJar 之后执行，仅当 jar 文件确实存在时复制。
 * 如果目标文件被占用（服务器运行中），会尝试覆盖。
 */
tasks.register('deployToServer') {
    dependsOn tasks.named('remapJar')
    doLast {
        def jarFile = tasks.named('remapJar').get().archiveFile.get().asFile
        def targetDir = serverModsDir
        def targetFile = new File(targetDir, jarFile.name)

        if (!jarFile.exists()) {
            logger.warn("Jar not found: {}", jarFile)
            return
        }

        // 确保目标目录存在
        targetDir.mkdirs()

        // 如果目标文件存在，先删除旧文件（可能被锁定则跳过）
        if (targetFile.exists()) {
            boolean deleted = targetFile.delete()
            if (!deleted) {
                logger.warn("Could not delete old jar (server may be running), will overwrite directly")
            }
        }

        // 复制新 jar
        try {
            java.nio.file.Files.copy(jarFile.toPath(), targetFile.toPath(),
                    java.nio.file.StandardCopyOption.REPLACE_EXISTING)
            logger.lifecycle("Deployed {} -> {}", jarFile.name, targetDir.absolutePath)
        } catch (Exception e) {
            logger.error("Failed to deploy jar: {}", e.message)
            throw new RuntimeException("Deploy failed", e)
        }
    }
}

// 让 build 任务自动部署
tasks.named('build') { finalizedBy('deployToServer') }
